# virtual-file-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CLI.hpp  Directory.hpp  File.hpp  FileSystem.hpp  Utils.hpp
src/: CLI.cpp  Directory.cpp  File.cpp  FileSystem.cpp  Utils.cpp  main.cpp
